# kant-zk-pastebin

./: #kant.org#  .dockerignore  .gitignore  .gitmodules  20260317_erdfa_system_objects.txt  Cargo.toml  DEPLOYMENT_SUCCESS.md  DEPLOY_HF.md  DOCS.md  Dockerfile  IPFS.md  MICROSERVICE.md  NAVIGATION_FIX.md  PASTEBIN_SEMANTICS.md  PENDING_CHANGES.md  README-HF.md  REFACTOR_PLAN.md  SNEAKERNET.md  SYSTEMD.md  a11y_navigation_fix.js  add-to-ipfs.sh  cleanup-tests.sh  deploy-hf.sh  deploy.sh  docker-entrypoint.sh  flake.nix  freeze-chats.py  index-docs.sh  kant-pastebin.nginx  kant-pastebin.service  package-lock.json  package.json  pipelite.nix  reindex-all.sh  reindex-sheaf.py  result-1  run-tests.sh  test-a11y.sh  test-docker.sh  test-flake.nix  (+6 more)
.github/: DOCKER_BUILD.md
.github/workflows/: docker-build.yml  nix-build.yml  pages.yml  static-pages.yml
chats/2026/03/13/: -shell--2--20260313-180050.json  (+5 more)
src/: api.rs  dasl.rs  handlers.rs  ipfs.rs  lib.rs  main.rs  main_old.rs  model.rs  openapi.yaml  paste.rs  plugin.rs  sheaf.rs  storage.rs  tagging.rs  view.rs
src/plugins/: screenshot.rs
static/: a11y.js
static-pastebin/: app.js  index.html  style.css
static-site/: index.html
static-site/samples/: d0.raw  d1.raw  d2.raw  d3.raw  d4.raw  d6.raw  d7.raw  d8.raw  d9.raw
static-site/stego/: index.html
static-site/stego/samples/: d5.raw
test-results/: .last-run.json
test-results/tests-workflow-complete-paste-workflow/: error-context.md
tests/: a11y.spec.ts  reply-a11y.spec.ts  workflow.spec.ts
upgrade-cli/: Cargo.toml
upgrade-cli/src/: main.rs
(+10 files in other folders)
