[package]
name = "kant-pastebin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"
env_logger = "0.11"
log = "0.4"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
