[package]
name = "kant-pastebin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1"
env_logger = "0.11"
log = "0.4"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
data-encoding = "2"
ciborium = "0.2"
serde_bytes = "0.11"
dirs-next = "2"
rust-unixfs = { path = "vendor/rust-ipfs/unixfs" }
ipld-core = "0.4.1"
multibase = "0.9"
actix-multipart = "0.7"
mime_guess = "2"
futures-util = "0.3"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
erdfa-publish = { path = "erdfa-publish" }
clap = { version = "4", features = ["derive"] }
walkdir = "2"
flate2 = "1"
base64 = "0.22"

[[bin]]
name = "kant-pastebin"
path = "src/main.rs"

[[bin]]
name = "freeze-chats"
path = "src/bin/freeze_chats.rs"
